Fix: gap in outline for .tab-focus utility

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -51,6 +51,7 @@ p > code {
 
   .tab-focus:focus-visible {
     outline: 0.25em solid black;
+    outline-offset: 0;
     background: black;
     color: white;
   }
